<?xml version="1.0"?>
<package>
  <name>hanp_layer</name>

  <version>0.0.2</version>

  <description>adds proxemics layers for tracked humans (for human aware navigation planning)</description>

  <!--  <author email="harmish@laas.fr">harmish khambhaita</author>  -->
  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/harmishhk/hanp_layer</url>
  <url type="bugtracker">https://github.com/harmishhk/hanp_layer/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>hanp_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>hanp_msgs</run_depend>

  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml" />
  </export>
</package>
